# V-KID

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: eval_progressive_mvp.yaml  sim_mvp.yaml  sim_smoke.yaml  train_mlp_mvp.yaml  train_mlp_mvp_long.yaml  train_mlp_smoke.yaml
docs/: EXPERIMENT_LOG.md  PROJECT_PLAN.md  PROJECT_RETHINK_NOTES.md  RESULTS_SUMMARY.md
scripts/: evaluate_progressive.py  generate_dataset.py  inspect_sampler.py  summarize_dataset.py  train_mlp_baseline.py
src/vkid/: __init__.py
src/vkid/analysis/: __init__.py  dataset_summary.py  progressive.py
src/vkid/data/: __init__.py  sampler.py
src/vkid/models/: __init__.py  vae_mlp.py
src/vkid/simulation/: __init__.py  actions.py  dataset.py  dynamics.py  parameters.py  plots.py
src/vkid/training/: __init__.py  losses.py  mlp_baseline.py
tests/: test_dataset_summary.py  test_progressive.py  test_sampler.py  test_simulation.py  test_vae_mlp.py
